Set default and min values in form

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,15 @@
         <ol>
           <li>
             <label for="num_weeks">Number of weeks:</label>
-            <input type="number" id="num_weeks" name="num_weeks">
+            <input type="number" id="num_weeks" name="num_weeks" value="12" min="1">
           </li>
           <li>
             <label for="max_inhours_shifts_per_person">Maximum in-hours shifts per person:</label>
-            <input type="number" id="max_inhours_shifts_per_person" name="max_inhours_shifts_per_person">
+            <input type="number" id="max_inhours_shifts_per_person" name="max_inhours_shifts_per_person" value="2" min="1">
           </li>
           <li>
             <label for="max_oncall_shifts_per_person">Maximum on-call shifts per person:</label>
-            <input type="number" id="max_oncall_shifts_per_person" name="max_oncall_shifts_per_person">
+            <input type="number" id="max_oncall_shifts_per_person" name="max_oncall_shifts_per_person" value="3" min="1">
           </li>
           <li>
             <label for="people">People:</label>
