--- a/templates/error.html
+++ b/templates/error.html
@@ -1,27 +1,34 @@
-<html>
-  <body>
-    <h1>Whoops</h1>
+{% extends "layout.html" %}
+{% block title %}Whoops{% endblock %}
+{% block content %}
+<h1 class="box">Whoops</h1>
 
 {% if (message is defined) and message %}
-    <p>{{ message }}</p>
+<section class="box">
+  <h2>Encountered a problem</h2>
+  <p>{{ message }}</p>
+</section>
 {% endif %}
 
 {% if (form_errors is defined) and form_errors %}
-    <h2>Encountered errors parsing the form</h2>
-    <ul>
+<section class="box">
+  <h2>Encountered errors parsing the form</h2>
+  <ul>
   {% for error in form_errors %}
-      <li>{{ error }}</li>
+    <li>{{ error }}</li>
   {% endfor %}
-    </ul>
+  </ul>
+</section>
 {% endif %}
 
 {% if (csv_errors is defined) and csv_errors %}
-    <h2>Encountered errors parsing the CSV</h2>
-    <ul>
+<section class="box">
+  <h2>Encountered errors parsing the CSV</h2>
+  <ul>
   {% for error in csv_errors %}
-      <li>{{ error }}</li>
+    <li>{{ error }}</li>
   {% endfor %}
-    </ul>
+  </ul>
+</section>
 {% endif %}
-  </body>
-</html>
+{% endblock %}
