--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,10 @@
 {% endblock %}
   </head>
   <body>
+    <header class="box">
+      <h1>{{ self.title() }}</h1>
+    </header>
+
     {% block content %}{% endblock %}
   </body>
 </html>
