Spreadsheets live in Google Drive, not Docs

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
     <dt>forbidden_weeks</dt>
     <dd>Weeks that this person cannot do, counting from 1.</dd>
   </dl>
-  <p>There is <a href="{{ url_for('static', filename='demo.csv') }}">an example file</a>.  If you're generating the actual GOV.UK rota, there is a spreadsheet in Google Docs.</p>
+  <p>There is <a href="{{ url_for('static', filename='demo.csv') }}">an example file</a>.  If you're generating the actual GOV.UK rota, there is a spreadsheet in Google Drive.</p>
   <p>A full list of constraints is <a href="https://github.com/barrucadu/govuk-2ndline-rota-generator">available on GitHub</a>.</p>
 </section>
 {% endblock %}
